* fix sarfari 9 flex bug causing registers to overlap if screen is too small * Add hidden class for registers via sass partial

--- a/sass/px-vis-polar.scss
+++ b/sass/px-vis-polar.scss
@@ -18,12 +18,9 @@
 // Base
 @import "px-flexbox-design/_base.flexbox.scss";
 
-:host {
-    width: 100%;
-    height: 100%;
-}
+@import "px-vis/_px-vis-chart-partial.scss";
 
-.wrapper {
+:host {
     width: 100%;
     height: 100%;
 }
